fixes spacing around trailer button

--- a/styles.css
+++ b/styles.css
@@ -164,7 +164,11 @@ body {
       background-color: whitesmoke;
       padding: 5px;
       border-radius: 5px;
-      margin-top: 20px;
+      display: block;
+      transition: background-color 0.2s, color 0.2s;
+      margin: 10px auto;
+      text-align: center;
+      width: 60%;
     }
 
     .movie-list > li > a:hover {
